# pantheon-frontend

./: .eslintrc.cjs  .gitignore  index.html  package.json
public/locales/en/: auth.json  navigate.json  translation.json
public/locales/ru/: auth.json  navigate.json  translation.json
src/: index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src/app/: app.entry.tsx  app.tsx
src/app/entry/: main.entry.tsx
src/app/providers/: _index.ts  app.provider.tsx  error.provider.tsx  index.ts  query.provider.tsx  router.provider.tsx  theme.provider.tsx  torrent.provider.tsx
src/app/styles/: global.scss
src/entities/User/: index.ts
src/entities/application/: index.ts
src/features/auth/: auth.entry.tsx  index.ts
src/features/langSwitcher/: index.ts
src/features/themeSwitcher/: index.ts
src/features/validation/: index.ts
src/pages/error/: index.ts
src/pages/profile/: index.ts
src/pages/register/: index.ts
src/pages/settings/: index.ts
src/shared/api/: api.ts  index.ts  torrent.ts
src/shared/config/: i18n.config.ts  index.ts  query.config.ts  route.config.tsx  theme.config.ts
src/shared/const/: router.ts
src/shared/context/: index.ts  theme.context.ts  torrent.context.ts
src/shared/hooks/: index.ts  useHorizontalResize.ts  useTheme.ts
src/shared/lib/: app.ts  uuid.ts
src/shared/services/: api.service.ts  index.ts  localstorage.service.tsx  router.service.tsx  torrent.service.ts
src/shared/styles/: index.tsx
src/shared/types/: common.ts  i18next.d.ts  router.ts  torrent.ts
(+82 files in other folders)
