[package]
name = "pantheon"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
librqbit = { path = "./crates/librqbit", features = [
    "tracing-subscriber-utils",
    "http-api",
    "upnp-serve-adapter",
] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
anyhow = "1.0.75"
base64 = "0.21.5"
http = "1.0.0"
directories = "5.0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing = "0.1"
serde_with = "3.4.0"
parking_lot = "0.12.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
